@@ -1,6 +1,6 @@
 # Makefile for storeio
 # 
-#   Copyright (C) 1995, 1996, 1997 Free Software Foundation, Inc.
+#   Copyright (C) 1995, 1996, 1997, 2000 Free Software Foundation, Inc.
 #
 #   This program is free software; you can redistribute it and/or
 #   modify it under the terms of the GNU General Public License as
@@ -24,6 +24,6 @@ SRCS = dev.c storeio.c open.c pager.c io.c
 LCLHDRS = dev.h open.h
 
 OBJS = $(SRCS:.c=.o)
-HURDLIBS = trivfs pager ports fshelp iohelp store threads ihash shouldbeinlibc
+HURDLIBS = trivfs pager fshelp iohelp store threads ports ihash shouldbeinlibc
 
 include ../Makeconf
